<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TITLE"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TITLE"
        android:layout_width="246dp"
        android:layout_height="78dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="72dp"
        android:text="@string/chuchu" />

    <TextView
        android:id="@+id/Distance"
        android:layout_width="125dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/Location"
        android:layout_marginBottom="130dp"
        android:text="@string/distance_from_ust" />

    <TextView
        android:id="@+id/Location"
        android:layout_width="125dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="196dp"
        android:layout_marginStart="35dp"
        android:text="@string/location"
        tools:text="Location:" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="246dp"
        android:layout_height="176dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/car" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView4"
        android:layout_alignTop="@+id/button4"
        android:text="@string/next" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView4"
        android:layout_marginBottom="39dp"
        android:text="@string/back" />
</RelativeLayout>
